--- a/fr-administration-front/src/app/app.component.html
+++ b/fr-administration-front/src/app/app.component.html
@@ -14,9 +14,43 @@
           tabindex="0"
           class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
         >
-          <li><a href="/">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="/associations">Associations</a></li>
+          <li>
+            <a
+              href="/"
+              class="flex items-center gap-3 hover:text-primary hover:fill-primary"
+              ><svg width="32" height="32" viewBox="0 0 24 24" class="w-7 h-7">
+                <path
+                  fill="currentColor"
+                  d="M21 20a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V9.314a1 1 0 0 1 .38-.785l8-6.311a1 1 0 0 1 1.24 0l8 6.31a1 1 0 0 1 .38.786V20zM7 12a5 5 0 0 0 10 0h-2a3 3 0 0 1-6 0H7z"
+                /></svg
+              >Home</a
+            >
+          </li>
+          <li>
+            <a
+              href="/users"
+              class="flex items-center gap-3 hover:text-primary hover:fill-primary"
+            >
+              <svg width="32" height="32" viewBox="0 0 24 24" class="w-7 h-7">
+                <path
+                  fill="currentColor"
+                  d="M12.414 5H21a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h7.414l2 2zM4 5v14h16V7h-8.414l-2-2H4zm4 13a4 4 0 1 1 8 0H8zm4-5a2.5 2.5 0 1 1 0-5a2.5 2.5 0 0 1 0 5z"
+                /></svg
+              >Users</a
+            >
+          </li>
+          <li>
+            <a
+              href="/associations"
+              class="flex items-center gap-3 hover:text-primary hover:fill-primary"
+              ><svg width="32" height="32" viewBox="0 0 24 24" class="w-7 h-7">
+                <path
+                  fill="currentColor"
+                  d="M12.414 5H21a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h7.414l2 2zM4 5v14h16V7h-8.414l-2-2H4zm7 4h2v8h-2V9zm4 3h2v5h-2v-5zm-8 2h2v3H7v-3z"
+                /></svg
+              >Associations</a
+            >
+          </li>
         </ul>
       </div>
     </div>
@@ -52,6 +86,5 @@
   </div>
   <div class="overflow-y-auto h-full">
     <router-outlet></router-outlet>
-
   </div>
 </div>
