feat: change global look

--- a/fr-administration-front/src/app/profile/profile.component.html
+++ b/fr-administration-front/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
-<div class="min-h-full grow bg-base-200 p-14">
+<div class="min-h-full grow bg-base-200 p-14 flex justify-center">
   <form
     [formGroup]="profile"
-    class="flex flex-col gap-8"
+    class="flex flex-col gap-8 max-w-3xl"
     (submit)="submit($event)"
   >
     <div class="flex flex-col sm:flex-row gap-8 pb-5">
