--- a/fr-administration-front/src/app/app.component.html
+++ b/fr-administration-front/src/app/app.component.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="navbar-center hidden sm:block">
-      <a href="/" class="btn btn-ghost normal-case text-xl">Administration</a>
+      <a href="/" class="btn btn-ghost normal-case text-xl hover:scale-110">My Admin Panel</a>
     </div>
     <div class="navbar-end gap-3 p-3">
       <p *ngIf="!isLogged()" class="text-end sm:text-base text-sm">
@@ -74,7 +74,7 @@
       </a>
       <button
         *ngIf="isLogged()"
-        class="btn btn-ghost btn-circle"
+        class="btn btn-ghost btn-circle hover:text-red-500"
         (click)="handleLogout()"
       >
         <div class="indicator">
